--- a/src/styles.css
+++ b/src/styles.css
@@ -178,9 +178,9 @@ body[data-errlMode="errl"] #errlCenter { opacity: 1; transition: opacity .2s eas
   mix-blend-mode: screen;
   opacity: .6;
   z-index: -1; /* Behind Errl image */
-  -webkit-mask-image: url('./portal/assets/L4_Central/errl-painted-2.svg');
+  -webkit-mask-image: url('./portal/pages/studio/pin-widget/ErrlPin.Widget/errl-painted-2.svg');
   -webkit-mask-repeat: no-repeat; -webkit-mask-size: 100% 100%; -webkit-mask-position: center;
-  mask-image: url('./portal/assets/L4_Central/errl-painted-2.svg');
+  mask-image: url('./portal/pages/studio/pin-widget/ErrlPin.Widget/errl-painted-2.svg');
   mask-repeat: no-repeat; mask-size: 100% 100%; mask-position: center;
 }
 
